# Pipe-Deck

./: .gitignore  .gitmodules  Backlog.md  LICENSE  Makefile  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  SUPPORT.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  claim-issue.yml  pr-format-lint.yml  stale-claim-check.yml
docs/: Home.md  README.md  _Footer.md  _Sidebar.md
docs/architecture/: Decisions.md  Phase2_Scaffold.md  PipeWire_Design.md  System_Architecture.md
docs/developers/: Development.md  Getting_Started.md  Packaging.md  Plugins.md  Release.md  Uninstall.md
docs/product/: About.md  Decisions.md  Getting_Started_Users.md  Product_Requirements.md  Roadmap.md
docs/project/: Contributing.md  Development.md  Getting_Started.md  Packaging.md  Plugins.md  Release.md  Uninstall.md  Wiki.md
docs/project-management/: README.md  contributing-workflow.md  issue-workflow.md  milestones-and-releases.md  release-strategy.md
docs/specs/: Audio_Terminology.md  Config_Spec.md  Plugin_API.md  Plugin_Review_Checklist.md  Rule_Engine_Spec.md  Theming.md  UI_Spec.md
e2e/fixtures/: routing-graph-harness-main.ts
flatpak/: README.md  com.pipedeck.PipeDeck.yml
packaging/: com.pipedeck.PipeDeck.desktop  com.pipedeck.PipeDeck.metainfo.xml
plugins/pipe-deck-effects/: plugin.yaml
plugins/template/: README.md  plugin.yaml
scripts/: release-checks.sh  screenshot-app.mjs  smoke-install.sh  stage-release.sh  verify-release-version.sh
src/: App.vue  main.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: filter_chain_spike.rs
src-tauri/icons/: icon.icns
src-tauri/packaging/: pipe-deck-daemon.service
src-tauri/src/: lib.rs  main.rs  tray.rs
src-tauri/src/backend/: mock.rs  mod.rs  stub.rs
src-tauri/src/backend/linux/: connection_effects.rs  graph_enrich.rs  graph_routing.rs  live.rs  mod.rs  pw_dump.rs  pw_link.rs  split_sink.rs  stream_match.rs  virtual_devices.rs  virtual_mic_mix.rs
src-tauri/src/backend/linux/pactl/: mixer.rs  mod.rs  parse.rs  routing.rs  virtual.rs
src-tauri/src/commands/: app_info.rs  config.rs  daemon.rs  effects.rs  graph.rs  mixer.rs  mod.rs  plugins.rs  profile.rs  routing.rs  rules.rs  virtual_device.rs
src-tauri/src/config/: mod.rs  profile_store.rs  store.rs  theme_store.rs
src-tauri/src/core/: effects.rs  engine.rs  mod.rs  models.rs  profile.rs  profile_drift.rs  recent_streams.rs  restore.rs  routing.rs  routing_rules.rs  rule_engine.rs  stream_identity.rs
src-tauri/src/core/engine/: connection_effects_ops.rs  effects_ops.rs  graph_sync.rs  mixer_ops.rs  mock.rs  mod.rs  passthrough_ops.rs  profile_ops.rs  routing_ops.rs  virtual_ops.rs
src-tauri/src/core/rules/: evaluation.rs  manual_overrides.rs  matching.rs  migration.rs  mod.rs
src-tauri/src/daemon/: mod.rs
src-tauri/src/daemon/ipc/: client.rs  mod.rs  protocol.rs  server.rs
src-tauri/src/pipewire/: adapter.rs  filter_chain.rs  fx_capability.rs  fx_validate.rs  graph_enrich.rs  graph_routing.rs  live.rs  mock.rs  mod.rs  native_host.rs  pactl.rs  pipewire_restart.rs  pw_cli.rs  pw_dump.rs  pw_link.rs  split_sink.rs  stream_match.rs  virtual_devices.rs  virtual_mic_mix.rs
src-tauri/src/pipewire/pactl/: mixer.rs  mod.rs  parse.rs  routing.rs  virtual.rs
src-tauri/src/plugins/: audit.rs  capabilities.rs  host.rs  manifest.rs  mod.rs  registry.rs
src-tauri/tests/: mock_backend_integration.rs  plugin_host_integration.rs
src-tauri/tests/fixtures/: pactl_list_sink_inputs.txt  pactl_list_source_outputs.txt  pw_link_list.txt
src/components/: AppFooter.vue  ConfirmDialog.vue  EffectStageList.vue  MixerStrip.spec.ts  MixerStrip.vue  NavIcon.vue  NewDeviceDialog.vue  NodeCardHeader.vue  NodeTypeIcon.vue  NoticeStack.vue  PluginDetailModal.vue  PromptDialog.vue  RouteExplanationPanel.spec.ts  RouteExplanationPanel.vue  RoutingGraph.vue  RoutingGraphContextMenu.spec.ts  RoutingGraphContextMenu.vue  RoutingGraphEdge.vue  RoutingGraphGroupNode.vue  RoutingGraphNode.vue  RoutingGraphNodeEffects.spec.ts  RoutingGraphNodeEffects.vue  RoutingMatrix.vue  SegmentedControl.vue  SinkRoutePicker.vue  StreamTargetPicker.vue  ToggleSwitch.vue
src/components/routing-graph/: applyConnection.spec.ts  applyConnection.ts  buildGraph.spec.ts  buildGraph.ts  collectEdges.spec.ts  collectEdges.ts  connectionRules.spec.ts  connectionRules.ts  groups.spec.ts  groups.ts  nodeIds.spec.ts  nodeIds.ts  nodePorts.spec.ts  nodePorts.ts  portTypes.spec.ts  portTypes.ts  rerouteLayout.ts  routingRelationship.spec.ts  routingRelationship.ts
src/components/rules/: RuleConditionEditor.spec.ts  RuleConditionEditor.vue  RuleFormModal.spec.ts  RuleFormModal.vue  RuleListItem.spec.ts  RuleListItem.vue
src/composables/: navigation.ts  routingGraphContext.spec.ts  routingGraphContext.ts  updates.spec.ts  updates.ts  useConnectionEffects.ts  useEffectChain.spec.ts  useEffectChain.ts  useMixerControls.ts  useRoutingActions.ts  useThrottledGraphUpdates.spec.ts  useThrottledGraphUpdates.ts
src/e2e/: playwright.config.ts  routing-graph.spec.ts  tsconfig.json
src/e2e/fixtures/: routing-graph-harness-groups-main.ts  routing-graph-harness-groups.html  (+2 more)
src/stores/: confirm.ts  daemonStatus.ts  newDeviceDialog.ts  notices.spec.ts  notices.ts  profiles.ts  prompt.ts  ruleDraft.ts  runtimeGraph.ts  theme.spec.ts  theme.ts  updateStatus.ts
src/styles/: _base.scss  _variables.scss  _view-shared.scss  app.scss  main.scss
src/test/: graphFixtures.ts
src/types/: app.ts  graph.ts  theme.ts
src/utils/: filterGraph.ts  plugins.ts  recentStreams.ts  routeExplanation.spec.ts  routeExplanation.ts  routingLayout.spec.ts  routingLayout.ts  ruleConditions.spec.ts  ruleConditions.ts
src/views/: Dashboard.vue  Effects.vue  Mixer.spec.ts  Mixer.vue  Profiles.vue  Routing.vue  Rules.spec.ts  Rules.vue  Settings.vue  Sources.vue
(+25 files in other folders)
