[package]
name = "pipe-deck"
version = "0.0.5"
description = "Linux Audio Control Center"
authors = ["Pipe Deck Contributors"]
edition = "2021"
default-run = "pipe-deck"

[lib]
name = "pipe_deck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pipe-deck-daemon"
path = "src/bin/pipe-deck-daemon.rs"

# Headless CLI — must not use the package name `pipe-deck` (that is the Tauri GUI binary from src/main.rs).
[[bin]]
name = "pipe-deck-cli"
path = "src/bin/pipe-deck.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time"] }
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
tar = "0.4"
regex = "1"
tauri-plugin-http = "2.5.9"

# Only for the #141 research spike (examples/filter_chain_spike.rs), gated
# behind the `spike` feature below — never a dependency of the shipped app
# or of `cargo build`/`cargo test`/`cargo check` without that feature. See
# docs/architecture/Decisions.md PD-017/PD-025/PD-026 and issue #141 for why: this is a
# throwaway prototype to check feasibility of a native, zero-restart
# alternative to the current conf.d + systemctl restart flow, not yet an
# approved architecture change, and pulls in a new native build-time
# dependency (`libpipewire-0.3` dev headers via `pkg-config`) that most
# contributors' environments won't have.
pipewire = { version = "0.10", optional = true }

# Only for daemon-owned native effects hosting (issue #148), behind the same
# `native-effects` feature as `pipewire` above. Narrow, single-purpose systemd
# `sd_notify(3)` integration (needed for `Type=notify` readiness, including
# correctly targeting systemd's abstract-namespace notify socket) — not a
# general IPC crate; the actual GUI<->daemon transport stays hand-rolled
# (Unix domain socket + line-delimited JSON, see `daemon::ipc`) rather than
# pulling in a dedicated IPC dependency.
sd-notify = { version = "0.5", optional = true }

# Only for the ephemeral GUI-spawned daemon child process (issue #148, used
# when the user hasn't enabled restore-on-login, so no persistent daemon is
# already running). `libc::prctl(PR_SET_PDEATHSIG, ...)` is what makes the
# kernel guarantee the child dies if the GUI process dies for *any* reason
# (crash, `kill -9`, OOM-kill), not just a clean quit — no in-app cleanup code
# can cover a crash, since nothing runs in a dying process. Already resolved
# transitively via tauri/tokio; declared directly here since Cargo requires
# that to call it.
libc = { version = "0.2", optional = true }

[features]
spike = ["dep:pipewire"]
# Promotes the #141 spike into a real (still opt-in) module,
# `src-tauri/src/pipewire/native_host.rs` — see issue #148. Not
# default-enabled: restart-based effects hosting stays the only mechanism
# compiled into a normal build.
native-effects = ["dep:pipewire", "dep:sd-notify", "dep:libc"]

[[example]]
name = "filter_chain_spike"
required-features = ["spike"]
