[package]
name = "pipe-deck"
version = "0.0.5"
description = "Linux Audio Control Center"
authors = ["Pipe Deck Contributors"]
edition = "2021"
default-run = "pipe-deck"

[lib]
name = "pipe_deck_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "pipe-deck-daemon"
path = "src/bin/pipe-deck-daemon.rs"

# Headless CLI — must not use the package name `pipe-deck` (that is the Tauri GUI binary from src/main.rs).
[[bin]]
name = "pipe-deck-cli"
path = "src/bin/pipe-deck.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-updater = "2"
tauri-plugin-single-instance = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
tokio = { version = "1", features = ["sync", "time"] }
chrono = { version = "0.4", features = ["serde"] }
flate2 = "1"
tar = "0.4"
regex = "1"
tauri-plugin-http = "2.5.9"

# Native, restart-free effects transport (issue #148, cutover in #149) —
# links `libpipewire` directly (via `pipewire-rs`) from the daemon binary to
# load/unload `module-filter-chain` instances in-process, replacing the old
# conf.d + `systemctl restart filter-chain.service` flow. See
# docs/architecture/Decisions.md PD-027 for the research spike and its
# field-confidence addenda (issues #148/#205). Requires `libpipewire-0.3` dev
# headers (via `pkg-config`) to build — see CONTRIBUTING.md for setup.
pipewire = { version = "0.10" }

# Narrow, single-purpose systemd `sd_notify(3)` integration (needed for
# `Type=notify` readiness, including correctly targeting systemd's
# abstract-namespace notify socket) — not a general IPC crate; the actual
# GUI<->daemon transport stays hand-rolled (Unix domain socket +
# line-delimited JSON, see `daemon::ipc`) rather than pulling in a dedicated
# IPC dependency.
sd-notify = { version = "0.5" }

# For the ephemeral GUI-spawned daemon child process (issue #148, used when
# the user hasn't enabled restore-on-login, so no persistent daemon is
# already running). `libc::prctl(PR_SET_PDEATHSIG, ...)` is what makes the
# kernel guarantee the child dies if the GUI process dies for *any* reason
# (crash, `kill -9`, OOM-kill), not just a clean quit — no in-app cleanup code
# can cover a crash, since nothing runs in a dying process. Already resolved
# transitively via tauri/tokio; declared directly here since Cargo requires
# that to call it.
libc = { version = "0.2" }
